[package]
name = "multi-proto"
version = "0.1.0"
publish = false
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
connectrpc = { workspace = true }
buffa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
bytes = { workspace = true }

[build-dependencies]
connectrpc-build = { workspace = true }
